feat: Add discord, hackathon, devpost

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,19 +76,16 @@ nav:
   - Home: index.md
   - Getting Started:
     - Introduction to Hackathons: start/hackathons.md
-    - Intro to Discord: start/discod.md
-    - Intro to Slack: start/slack.md
+    - Intro to Discord: start/discord.md
     - Intro to Devpost: start/devpost.md
     - Idea Creation Guide: start/idea.md
     - Team Creation Guide: start/team.md
-    - Video Creation Guide: start/video.md
   - Hacker Tools:
     - Intro to the Shell/Commandline: hacker/commandline.md
     - Version Control (Git): hacker/git.md
     - How to use APIs in Hackathons: hacker/api.md
     - How to Automate Everything with the Commandline: hacker/automate.md
     - Heroku: hacker/heroku.md
-    - Useful Beginner Templates: hacker/template.md
     - Other Useful Tools: hacker/others.md
   - Hardware Guides:
     - A little physics before you go: hardware/physics.md
